--- a/OnlinerNotifier/OnlinerNotifier.DAL/OnlinerNotifier.DAL.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.DAL/OnlinerNotifier.DAL.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
+    <Compile Include="UnitOfWork.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
