--- a/OnlinerNotifier/OnlinerNotifier.Web/Web.config
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Web.config
@@ -11,7 +11,8 @@
 
   <oauth2>
     <services>
-      <add clientType="FacebookClient" enabled="false" clientId="1052861284806761" clientSecret="b4084888960567bf19340d5ddfb0adf6" scope="email" redirectUri="https://localhost:44393/Auth" />
+      <add clientType="FacebookClient" enabled="false" clientId="1052861284806761" clientSecret="b4084888960567bf19340d5ddfb0adf6" scope="email" redirectUri="https://localhost:44393/Authorization/Auth" />
+      <add clientType="TwitterClient" enabled="true" clientId="0hbAghW5k7KpAqDd5nFlm9NDN" clientSecret="eznPeyJDP9q5sVtBq5FRXQmrFQbDCxfduXFTjjrO3QnY1Lrzck" redirectUri="https://localhost:44393/Authorization/Auth?providerName=Twitter" />
     </services>
   </oauth2>
   
@@ -57,7 +58,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Mvc" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.Optimization" publicKeyToken="31bf3856ad364e35" />
@@ -70,6 +71,14 @@
       <dependentAssembly>
         <assemblyIdentity name="WebGrease" publicKeyToken="31bf3856ad364e35" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.2.14234" newVersion="1.5.2.14234" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Autofac" publicKeyToken="17863af14b0044da" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.5.0.0" newVersion="3.5.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Web.Http" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
