--- a/OnlinerNotifier/OnlinerNotifier.Web/packages.config
+++ b/OnlinerNotifier/OnlinerNotifier.Web/packages.config
@@ -1,5 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="angularjs" version="1.5.6" targetFramework="net452" />
+  <package id="Autofac" version="3.5.0" targetFramework="net452" />
+  <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net452" />
+  <package id="Autofac.WebApi2" version="4.0.0-beta7-215" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.0.0" targetFramework="net452" />
