--- a/OnlinerNotifier/OnlinerNotifier.Web/packages.config
+++ b/OnlinerNotifier/OnlinerNotifier.Web/packages.config
@@ -1,9 +1,13 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="angularjs" version="1.5.6" targetFramework="net452" />
+  <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
   <package id="Autofac" version="3.5.0" targetFramework="net452" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net452" />
   <package id="Autofac.WebApi2" version="4.0.0-beta7-215" targetFramework="net452" />
+  <package id="bootstrap" version="4.0.0-alpha2" targetFramework="net452" />
+  <package id="FontAwesome" version="4.4.0" targetFramework="net452" />
+  <package id="jQuery" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.Agent.Intercept" version="1.2.1" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights.DependencyCollector" version="2.0.0" targetFramework="net452" />
@@ -14,6 +18,7 @@
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.Razor" version="3.2.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.3" targetFramework="net452" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.3" targetFramework="net452" />
@@ -25,4 +30,5 @@
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="OAuth2" version="0.8.37" targetFramework="net452" />
   <package id="RestSharp" version="105.2.3" targetFramework="net452" />
+  <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
