--- a/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
@@ -113,8 +113,12 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="app\app.js" />
+    <Content Include="app\controllers\accountController.js" />
     <Content Include="app\controllers\authController.js" />
+    <Content Include="app\controllers\homeController.js" />
+    <Content Include="app\views\account.html" />
     <Content Include="app\views\auth.html" />
+    <Content Include="app\views\home.html" />
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
     <Content Include="Content\font-awesome.css" />
