--- a/OnlinerNotifier/OnlinerNotifier.Web/packages.config
+++ b/OnlinerNotifier/OnlinerNotifier.Web/packages.config
@@ -6,6 +6,7 @@
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net452" />
   <package id="Autofac.WebApi2" version="4.0.0-beta7-215" targetFramework="net452" />
   <package id="bootstrap" version="4.0.0-alpha2" targetFramework="net452" />
+  <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
   <package id="FontAwesome" version="4.4.0" targetFramework="net452" />
   <package id="jQuery" version="2.0.0" targetFramework="net452" />
   <package id="Microsoft.ApplicationInsights" version="2.0.0" targetFramework="net452" />
