--- a/OnlinerNotifier/OnlinerNotifier.Web/Web.config
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Web.config
@@ -9,6 +9,13 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false"/>
   </configSections>
+  
+  <connectionStrings>
+    <add name="DefaultConnection" 
+     connectionString="Data Source=.;Initial Catalog=OnlinerNotifier;Integrated Security=True"
+     providerName="System.Data.SqlClient" />
+  </connectionStrings>
+    
   <oauth2>
     <services>
       <add clientType="FacebookClient" enabled="false" clientId="1052861284806761" clientSecret="b4084888960567bf19340d5ddfb0adf6" scope="email" redirectUri="https://localhost:44393/Authorization/Auth"/>
