--- a/OnlinerNotifier/OnlinerNotifier.DAL/OnlinerNotifier.DAL.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.DAL/OnlinerNotifier.DAL.csproj
@@ -50,13 +50,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Context.cs" />
-    <Compile Include="Migrations\201606170639082_InitialCreate.cs" />
-    <Compile Include="Migrations\201606170639082_InitialCreate.Designer.cs">
-      <DependentUpon>201606170639082_InitialCreate.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Migrations\201606171501384_AddProductParameters.cs" />
-    <Compile Include="Migrations\201606171501384_AddProductParameters.Designer.cs">
-      <DependentUpon>201606171501384_AddProductParameters.cs</DependentUpon>
+    <Compile Include="Migrations\201606200938439_Initial.cs" />
+    <Compile Include="Migrations\201606200938439_Initial.Designer.cs">
+      <DependentUpon>201606200938439_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Repositories\Interface\IRepository.cs" />
@@ -72,11 +68,8 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="Migrations\201606170639082_InitialCreate.resx">
-      <DependentUpon>201606170639082_InitialCreate.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Migrations\201606171501384_AddProductParameters.resx">
-      <DependentUpon>201606171501384_AddProductParameters.cs</DependentUpon>
+    <EmbeddedResource Include="Migrations\201606200938439_Initial.resx">
+      <DependentUpon>201606200938439_Initial.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
