--- a/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
@@ -194,6 +194,9 @@
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductController.cs" />
     <Compile Include="Controllers\UserController.cs" />
+    <Compile Include="Filters\AuthenticationFailureResult.cs" />
+    <Compile Include="Filters\AuthenticationAttribute.cs" />
+    <Compile Include="Filters\Principal.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
