--- a/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
@@ -68,9 +68,11 @@
     <Compile Include="Models\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\Implementations\ProductService.cs" />
+    <Compile Include="Services\IPricesCheckingService.cs" />
     <Compile Include="Services\IProductService.cs" />
     <Compile Include="Services\IUserService.cs" />
     <Compile Include="Services\Implementations\UserService.cs" />
+    <Compile Include="Services\Implementations\PriceCheckingService.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
