ProductPriseChange model add.

--- a/OnlinerNotifier/OnlinerNotifier.DAL/OnlinerNotifier.DAL.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.DAL/OnlinerNotifier.DAL.csproj
@@ -55,10 +55,12 @@
       <DependentUpon>201606200938439_Initial.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
+    <Compile Include="Models\ProductPriceChange.cs" />
     <Compile Include="Repositories\Interface\IRepository.cs" />
     <Compile Include="Models\Product.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repositories\ProductPriceChangeRepository.cs" />
     <Compile Include="Repositories\ProductRepository.cs" />
     <Compile Include="Repositories\UserRepository.cs" />
     <Compile Include="UnitOfWork.cs" />
