--- a/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
@@ -61,8 +61,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Mappers\PriceChangesMapper.cs" />
     <Compile Include="Mappers\ProductMapper.cs" />
     <Compile Include="Mappers\UserMapper.cs" />
+    <Compile Include="Models\OnlinerDataModels\PriceOnliner.cs" />
+    <Compile Include="Models\OnlinerDataModels\ProductOnliner.cs" />
+    <Compile Include="Models\OnlinerDataModels\SearchResultOnliner.cs" />
     <Compile Include="Models\ProductViewModel.cs" />
     <Compile Include="Models\UserDataViewModel.cs" />
     <Compile Include="Models\UserViewModel.cs" />
