--- a/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.Web/OnlinerNotifier.Web.csproj
@@ -208,6 +208,7 @@
     </Compile>
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Scheduler\CheckPricesJob.cs" />
+    <Compile Include="Scheduler\JobFactory.cs" />
     <Compile Include="Scheduler\MyRegistry.cs" />
   </ItemGroup>
   <ItemGroup>
