UserProduct linking model for tracking status add.

--- a/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
@@ -64,6 +64,7 @@
     <Compile Include="Mappers\PriceChangesMapper.cs" />
     <Compile Include="Mappers\ProductMapper.cs" />
     <Compile Include="Mappers\UserMapper.cs" />
+    <Compile Include="Mappers\UserProductsMapper.cs" />
     <Compile Include="Models\OnlinerDataModels\PriceOnliner.cs" />
     <Compile Include="Models\OnlinerDataModels\ProductOnliner.cs" />
     <Compile Include="Models\OnlinerDataModels\SearchResultOnliner.cs" />
