--- a/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
@@ -65,6 +65,8 @@
     <Compile Include="Mappers\ProductMapper.cs" />
     <Compile Include="Mappers\UserMapper.cs" />
     <Compile Include="Mappers\UserProductsMapper.cs" />
+    <Compile Include="Models\NotificationModels\NotificationDataModel.cs" />
+    <Compile Include="Models\NotificationModels\NotificationProductChangesModel.cs" />
     <Compile Include="Models\OnlinerDataModels\PriceOnliner.cs" />
     <Compile Include="Models\OnlinerDataModels\ProductOnliner.cs" />
     <Compile Include="Models\OnlinerDataModels\SearchResultOnliner.cs" />
@@ -72,8 +74,12 @@
     <Compile Include="Models\UserDataViewModel.cs" />
     <Compile Include="Models\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Services\IEmailSendingService.cs" />
+    <Compile Include="Services\Implementations\EmailSendingService.cs" />
+    <Compile Include="Services\Implementations\NotificationService.cs" />
     <Compile Include="Services\Implementations\OnlinerSearchService.cs" />
     <Compile Include="Services\Implementations\ProductService.cs" />
+    <Compile Include="Services\INotificationService.cs" />
     <Compile Include="Services\IOnlinerSearchService.cs" />
     <Compile Include="Services\IPricesCheckingService.cs" />
     <Compile Include="Services\IProductService.cs" />
