--- a/OnlinerNotifier/OnlinerNotifier.BLL/packages.config
+++ b/OnlinerNotifier/OnlinerNotifier.BLL/packages.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="EntityFramework" version="6.1.3" targetFramework="net452" />
+  <package id="Microsoft.AspNet.Razor" version="4.0.0-beta7" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="7.0.1" targetFramework="net452" />
   <package id="OAuth2" version="0.8.37" targetFramework="net452" />
+  <package id="RazorEngine" version="4.3.2-beta1" targetFramework="net452" />
   <package id="RestSharp" version="105.2.3" targetFramework="net452" />
 </packages>
