--- a/OnlinerNotifier/OnlinerNotifier.Web/Web.config
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Web.config
@@ -90,12 +90,12 @@
         <bindingRedirect oldVersion="0.0.0.0-5.2.3.0" newVersion="5.2.3.0" />
       </dependentAssembly>
       <dependentAssembly>
-        <assemblyIdentity name="AsyncIO" publicKeyToken="44a94435bd6f33f8" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-0.1.18.0" newVersion="0.1.18.0" />
+        <assemblyIdentity name="AsyncIO" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-0.1.17.0" newVersion="0.1.17.0" />
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="NetMQ" publicKeyToken="a6decef4ddc58b3a" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-4.0.0.0" newVersion="4.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.3.0.11" newVersion="3.3.0.11" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
