--- a/OnlinerNotifier/OnlinerNotifier.Web/packages.config
+++ b/OnlinerNotifier/OnlinerNotifier.Web/packages.config
@@ -2,7 +2,7 @@
 <packages>
   <package id="angularjs" version="1.5.6" targetFramework="net452" />
   <package id="Antlr" version="3.4.1.9004" targetFramework="net452" />
-  <package id="AsyncIO" version="0.1.18.0" targetFramework="net452" />
+  <package id="AsyncIO" version="0.1.17.0" targetFramework="net452" />
   <package id="Autofac" version="3.5.0" targetFramework="net452" />
   <package id="Autofac.Mvc5" version="3.3.4" targetFramework="net452" />
   <package id="Autofac.WebApi2" version="4.0.0-beta7-215" targetFramework="net452" />
@@ -30,7 +30,7 @@
   <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net452" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
-  <package id="NetMQ" version="4.0.0.0-beta" targetFramework="net452" />
+  <package id="NetMQ" version="3.3.0.11" targetFramework="net452" />
   <package id="NetMQ.WebSockets" version="0.5.0.0-beta" targetFramework="net452" />
   <package id="Newtonsoft.Json" version="8.0.3" targetFramework="net452" />
   <package id="OAuth2" version="0.8.37" targetFramework="net452" />
