Get started with toast notifications provider switching.

--- a/OnlinerNotifier/OnlinerNotifier.Web/Web.config
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Web.config
@@ -8,6 +8,7 @@
     <section name="oauth2" type="OAuth2.Configuration.OAuth2ConfigurationSection, OAuth2, Version=0.8.37, Culture=neutral" />
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+    <section name="toastNotifications" type="OnlinerNotifier.Configuration.ToastNotificationsConfiguration"/>
   </configSections>
 
   <connectionStrings>
@@ -115,4 +116,5 @@
       <provider invariantName="System.Data.SqlClient" type="System.Data.Entity.SqlServer.SqlProviderServices, EntityFramework.SqlServer" />
     </providers>
   </entityFramework>
+  <toastNotifications notificationsProviderType="NetMQ"/>
 </configuration>
