--- a/OnlinerNotifier/OnlinerNotifier.Web/packages.config
+++ b/OnlinerNotifier/OnlinerNotifier.Web/packages.config
@@ -36,6 +36,7 @@
   <package id="OAuth2" version="0.8.37" targetFramework="net452" />
   <package id="Owin" version="1.0" targetFramework="net452" />
   <package id="RestSharp" version="105.2.3" targetFramework="net452" />
+  <package id="StackExchange.Redis" version="1.1.603" targetFramework="net452" />
   <package id="toastr" version="2.1.1" targetFramework="net452" />
   <package id="WebGrease" version="1.5.2" targetFramework="net452" />
 </packages>
