--- a/OnlinerNotifier/OnlinerNotifier.BLL/packages.config
+++ b/OnlinerNotifier/OnlinerNotifier.BLL/packages.config
@@ -6,4 +6,5 @@
   <package id="OAuth2" version="0.8.37" targetFramework="net452" />
   <package id="RazorEngine" version="3.8.2" targetFramework="net452" />
   <package id="RestSharp" version="105.2.3" targetFramework="net452" />
+  <package id="StackExchange.Redis" version="1.1.603" targetFramework="net452" />
 </packages>
