Add Facebook and Vk authorization.

--- a/OnlinerNotifier/OnlinerNotifier.Web/Web.config
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Web.config
@@ -17,7 +17,8 @@
 
   <oauth2>
     <services>
-      <add clientType="FacebookClient" enabled="false" clientId="1052861284806761" clientSecret="b4084888960567bf19340d5ddfb0adf6" scope="email" redirectUri="https://localhost:44393/Authorization/Auth" />
+      <add clientType="VkClient" enabled="true" clientId="5536754" clientSecret="GDq1rhApwflcgb79zGFJ" redirectUri="https://localhost:44393/Authorization/Auth?providerName=Vkontakte" />
+      <add clientType="FacebookClient" enabled="true" clientId="1052861284806761" clientSecret="b4084888960567bf19340d5ddfb0adf6" scope="email" redirectUri="https://localhost:44393/Authorization/Auth?providerName=Facebook" />
       <add clientType="TwitterClient" enabled="true" clientId="0hbAghW5k7KpAqDd5nFlm9NDN" clientSecret="eznPeyJDP9q5sVtBq5FRXQmrFQbDCxfduXFTjjrO3QnY1Lrzck" redirectUri="https://localhost:44393/Authorization/Auth?providerName=Twitter" />
     </services>
   </oauth2>
