--- a/OnlinerNotifier/OnlinerNotifier.Web/Web.config
+++ b/OnlinerNotifier/OnlinerNotifier.Web/Web.config
@@ -118,4 +118,17 @@
     </providers>
   </entityFramework>
   <toastNotifications notificationsProviderType="SignalR" />
+  <system.net>
+    <mailSettings>
+      <smtp deliveryMethod="Network" from="OnlinerNotifier@gmail.com">
+        <network 
+          defaultCredentials="false"
+          enableSsl="true"
+          host="smtp.gmail.com"
+          password="securepassword"
+          port="587"
+          userName="OnlinerNotifier@gmail.com"/>
+      </smtp>
+    </mailSettings>
+  </system.net>
 </configuration>
