--- a/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
+++ b/OnlinerNotifier/OnlinerNotifier.BLL/OnlinerNotifier.BLL.csproj
@@ -93,8 +93,10 @@
     <Compile Include="Models\UserViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Redis\RedisConnector.cs" />
-    <Compile Include="Services\IEmailService.cs" />
-    <Compile Include="Services\Implementations\EmailService.cs" />
+    <Compile Include="Services\EmailServices\IEmailBuildingService.cs" />
+    <Compile Include="Services\EmailServices\IEmailService.cs" />
+    <Compile Include="Services\Implementations\EmailServices\EmailBuildingService.cs" />
+    <Compile Include="Services\Implementations\EmailServices\EmailService.cs" />
     <Compile Include="Services\IRedisService.cs" />
     <Compile Include="Services\Implementations\NotificationService.cs" />
     <Compile Include="Services\Implementations\RedisService.cs" />
@@ -111,11 +113,13 @@
     <Compile Include="Services\IUserService.cs" />
     <Compile Include="Services\Implementations\UserService.cs" />
     <Compile Include="Services\Implementations\PriceCheckingService.cs" />
+    <Compile Include="Templates\Builders\IPriceChangesEmailBuilder.cs" />
+    <Compile Include="Templates\Builders\RazorPriceChangesEmailBuilder.cs" />
     <Compile Include="Templates\TemplatePathProvider\ITemplatePathProvider.cs" />
     <Compile Include="Templates\TemplatePathProvider\TemplatePathProvider.cs" />
     <Compile Include="Validators\EmailValidator.cs" />
-    <Compile Include="Wrappers\ISmtpClient.cs" />
-    <Compile Include="Wrappers\SmtpClientWrapper.cs" />
+    <Compile Include="SmtpClients\ISmtpClient.cs" />
+    <Compile Include="SmtpClients\SmtpClientWrapper.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
